--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ 
+*{
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ body {
+  margin: 3rem;
+ background-color: aqua;
+}
+.card {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  border-radius: 6px;
+  padding: 1px;
+  text-align: center;
+  width: 40%;
+  height: 30%;
+  z-index: 10;
+  position: fixed;
+  top: 20vh;
+  left: calc(50% -15rem);
+}
+
+.btn {
+  font: inherit;
+  font-weight: 500;
+  font-size: 20px;
+  background-color: #800040;
+  border: none;
+  color: white;
+  cursor: pointer;
+  outline: none;
+  width: 30%;
+  height: 60px;
+  border-radius: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.btn:hover {
+  background-color: #9c1458;
+  border-color: #9c1458;
 }
